--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-        <h1>СИГНАЛЫ</h1>
+        <h1>SIGNALS</h1>
 
         <div id="imageContainer"></div>
         <div id="placeholderContainer">
